@@ -3796,6 +3796,39 @@ return|;
 block|}
 specifier|public
 name|Artifact
+name|getSrcArtifact
+parameter_list|()
+block|{
+return|return
+operator|new
+name|MDArtifact
+argument_list|(
+name|ivyModuleDescriptor
+argument_list|,
+name|mrid
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|"source"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|null
+argument_list|,
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"m:classifier"
+argument_list|,
+literal|"src"
+argument_list|)
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Artifact
 name|getJavadocArtifact
 parameter_list|()
 block|{
@@ -3839,6 +3872,22 @@ argument_list|(
 literal|"sources"
 argument_list|,
 name|getSourceArtifact
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|addSrcArtifact
+parameter_list|()
+block|{
+name|ivyModuleDescriptor
+operator|.
+name|addArtifact
+argument_list|(
+literal|"sources"
+argument_list|,
+name|getSrcArtifact
 argument_list|()
 argument_list|)
 expr_stmt|;
