@@ -1853,6 +1853,60 @@ expr_stmt|;
 block|}
 else|else
 block|{
+comment|// it seems that sometimes the 'src' classifier is used instead of 'sources'
+comment|// Cfr. IVY-1138
+name|ArtifactOrigin
+name|srcArtifact
+init|=
+name|resolver
+operator|.
+name|locate
+argument_list|(
+name|mdBuilder
+operator|.
+name|getSrcArtifact
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|ArtifactOrigin
+operator|.
+name|isUnknown
+argument_list|(
+name|srcArtifact
+argument_list|)
+operator|&&
+operator|!
+name|srcArtifact
+operator|.
+name|getLocation
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|mainArtifactLocation
+argument_list|)
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"source artifact found for "
+operator|+
+name|mrid
+argument_list|)
+expr_stmt|;
+name|mdBuilder
+operator|.
+name|addSrcArtifact
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
 name|Message
 operator|.
 name|debug
@@ -1862,6 +1916,7 @@ operator|+
 name|mrid
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|ArtifactOrigin
 name|javadocArtifact
