@@ -227,6 +227,22 @@ name|ivy
 operator|.
 name|core
 operator|.
+name|deliver
+operator|.
+name|DeliverOptions
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
 name|module
 operator|.
 name|descriptor
@@ -250,6 +266,24 @@ operator|.
 name|descriptor
 operator|.
 name|DefaultArtifact
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
+name|DependencyDescriptor
 import|;
 end_import
 
@@ -29964,6 +29998,176 @@ argument_list|(
 literal|"classifier"
 argument_list|,
 literal|"sources"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|sourceFileInCache
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|jarFileInCache
+operator|.
+name|length
+argument_list|()
+operator|!=
+name|sourceFileInCache
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testResolveMaven2GetSourcesWithSrcClassifier
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// IVY-1138
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/m2/ivysettings.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+name|ResolveTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivy-m2-with-src.xml"
+argument_list|)
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org.apache"
+argument_list|,
+literal|"test-src"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|File
+name|jarFileInCache
+init|=
+name|getArchiveFileInCache
+argument_list|(
+name|ivy
+argument_list|,
+literal|"org.apache"
+argument_list|,
+literal|"test-src"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"test-src"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|jarFileInCache
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|File
+name|sourceFileInCache
+init|=
+name|getArchiveFileInCache
+argument_list|(
+name|ivy
+argument_list|,
+literal|"org.apache"
+argument_list|,
+literal|"test-src"
+argument_list|,
+literal|null
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"test-src"
+argument_list|,
+literal|"source"
+argument_list|,
+literal|"jar"
+argument_list|,
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"classifier"
+argument_list|,
+literal|"src"
 argument_list|)
 argument_list|)
 decl_stmt|;
